RESOLVED FIXED192630
Don't attempt to animate invalid CSS properties
https://bugs.webkit.org/show_bug.cgi?id=192630
Summary Don't attempt to animate invalid CSS properties
Brent Fulgham
Reported 2018-12-12 09:38:12 PST
Inherited animation properties can cause child elements to think they need to animate CSS properties that they do not support, leading to nullptr crashes. Instead, recognize that CSSPropertyInvalid is a potential requested animation property, and handle it cleanly (much like Animation::AnimateUnknownProperty is already handled).
Attachments
Patch (4.33 KB, patch)
2018-12-12 09:51 PST, Brent Fulgham
no flags
Patch (3.81 KB, patch)
2018-12-12 09:55 PST, Brent Fulgham
no flags
Patch (3.86 KB, patch)
2018-12-12 12:19 PST, Brent Fulgham
no flags
Radar WebKit Bug Importer
Comment 1 2018-12-12 09:41:36 PST
Brent Fulgham
Comment 2 2018-12-12 09:51:48 PST
Brent Fulgham
Comment 3 2018-12-12 09:55:39 PST
Dean Jackson
Comment 4 2018-12-12 10:19:42 PST
Comment on attachment 357147 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=357147&action=review > LayoutTests/animations/invalid-property-animation.html:9 > + document.designMode = "off"; Supposedly not needed.
Brent Fulgham
Comment 5 2018-12-12 12:19:32 PST
Brent Fulgham
Comment 6 2018-12-13 12:04:14 PST
Thank you, Antoine!
WebKit Commit Bot
Comment 7 2018-12-13 12:30:09 PST
Comment on attachment 357156 [details] Patch Clearing flags on attachment: 357156 Committed r239174: <https://trac.webkit.org/changeset/239174>
WebKit Commit Bot
Comment 8 2018-12-13 12:30:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.