Don't attempt to animate invalid CSS properties https://bugs.webkit.org/show_bug.cgi?id=192630 <rdar://problem/46664433>

Reviewed by Antoine Quint.

Source/WebCore:

Inherited animation properties can cause child elements to think they need to animate CSS properties
that they do not support, leading to nullptr crashes.

Recognize that CSSPropertyInvalid is a potential requested animation property, and handle it
cleanly.

Tests: animations/invalid-property-animation.html

* page/animation/CompositeAnimation.cpp:
(WebCore::CompositeAnimation::updateTransitions):
* svg/SVGAnimateElementBase.cpp:
(WebCore::SVGAnimateElementBase::calculateAnimatedValue):

LayoutTests:

* animations/invalid-property-animation-expected.txt: Added.
* animations/invalid-property-animation.html: Added.


Canonical link: https://commits.webkit.org/207248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239174 268f45cc-cd09-0410-ab3c-d52691b4dbfc